# MARS

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  Dockerfile.nextjs  INTEGRATION.md  README.md  docker-compose.yml  pyproject.toml
backend/: main.py  run.py
backend/execution/: isolated_executor.py  task_executor.py
backend/models/: aiweekly_schemas.py  pda_schemas.py  releasenotes_schemas.py
backend/routers/: __init__.py  aiweekly.py  deepresearch.py  files.py  newspulse.py  pda.py  releasenotes.py  rfp.py  tasks.py
backend/services/: pda_service.py
backend/websocket/: events.py
cmbagent/: cli.py  cmbagent.py  llm_provider.py  ocr.py
cmbagent-ui/: package-lock.json
cmbagent-ui/app/tasks/: page.tsx
cmbagent-ui/components/: TaskInput.tsx
cmbagent-ui/components/SessionManager/: SessionDetailPanel.tsx  SessionPlanTab.tsx
cmbagent-ui/components/sessions/: SessionCard.tsx  SessionScreen.tsx
cmbagent-ui/components/tasks/: AIWeeklyTask.tsx  AIWeeklyTaskEnhanced.tsx  ProductDiscoveryTask.tsx  TaskList.tsx
cmbagent-ui/lib/: pda-api.ts
cmbagent-ui/types/: pda.ts
cmbagent/agents/executor_response_formatter/: executor_response_formatter.yaml
cmbagent/agents/planner_response_formatter/: planner_response_formatter.py
cmbagent/config/: __init__.py  model_config.yaml  model_registry.py
cmbagent/external_tools/: __init__.py  ag2_free_tools.py  langchain_tools.py  news_tools.py  tool_adapter.py
cmbagent/functions/: planning.py  registration.py  status.py
cmbagent/handoffs/: message_limiting.py
cmbagent/managers/: agent_manager.py
cmbagent/mcp/: tool_integration.py
cmbagent/phases/: control.py  copilot_phase.py  hitl_control.py
cmbagent/phases/aiweekly/: __init__.py  base.py  collection_phase.py  curation_phase.py  generation_phase.py  review_phase.py
cmbagent/phases/rfp/: __init__.py  agent_teams.py  architecture_phase.py  base.py  cloud_phase.py  execution_phase.py  implementation_phase.py  proposal_phase.py  requirements_phase.py  token_utils.py  tools_phase.py
cmbagent/task_framework/: newspulse_helpers.py  pda_helpers.py  releasenotes_helpers.py  releasenotes_oneshot_helpers.py  stage_helpers.py
cmbagent/task_framework/newspulse_agents/: report_nodes.py
cmbagent/task_framework/phases/: paper.py
docs/: SESSION_MANAGEMENT.md  aiweekly-flow-diagram.md  aiweekly-integration.md  aiweekly-report-generator.md  deepresearch-integration.md  itops-task-catalog.md  logging.md  release-notes-functionality.md  rfp-flow-diagram.md  rfp-integration.md  rfp-proposal-generator.md
mars-ui/: dev-with-browser.js  next.config.js  package-lock.json  package.json  server.js  tsconfig.tsbuildinfo
mars-ui/app/: globals.css  icon.tsx  layout.tsx  page.tsx
mars-ui/app/sessions/: loading.tsx  page.tsx
mars-ui/app/tasks/: loading.tsx  page.tsx
mars-ui/components/: ApprovalDialog.tsx  CopilotView.tsx  CredentialsKeyIcon.tsx  CredentialsModal.tsx  CredentialsStatus.tsx  FileBrowser.tsx  Header.tsx  ModelSelector.tsx  ResultDisplay.tsx  TaskInput.tsx  TopNavigation.tsx
mars-ui/components/SessionManager/: SessionConfigTab.tsx  SessionConsoleTab.tsx  SessionConversationTab.tsx  SessionCostsTab.tsx  SessionDAGTab.tsx  SessionList.tsx  SessionOverview.tsx  SessionResultsTab.tsx  index.ts
mars-ui/components/aiweekly/: AIWeeklyReportPanel.tsx  AIWeeklyReviewPanel.tsx
mars-ui/components/branching/: BranchComparison.tsx  BranchTree.tsx  CreateBranchDialog.tsx  index.ts
mars-ui/components/core/: Stepper.tsx
mars-ui/components/dag/: DAGControls.tsx  DAGFilesView.tsx  DAGHistoryView.tsx  DAGNode.tsx  DAGNodeDetails.tsx  DAGStatsPanel.tsx  DAGTimelineView.tsx  DAGVisualization.tsx  DAGWorkspace.tsx  ExecutionTimeline.tsx  NodeActionDialog.tsx  index.ts
mars-ui/components/deepresearch/: FileUploadZone.tsx  StageAdvancedSettings.tsx
mars-ui/components/files/: FilePreview.tsx
mars-ui/contexts/: WebSocketContext.tsx
mars-ui/hooks/: useAIWeeklyTask.ts  useCredentials.ts  useDeepresearchTask.ts  useNewsPulseTask.ts  usePdaTask.ts  useReleaseNotesTask.ts  useResilientWebSocket.ts  useRfpTask.ts  useSessionDetail.ts  useWebSocket.ts
mars-ui/lib/: config.ts  modes.ts  pda-api.ts  telemetry.ts
mars-ui/types/: aiweekly.ts  branching.ts  dag.ts  pda.ts  retry.ts  sessions.ts  tables.ts
(+46 files in other folders)
